# davey-jones

./: .gitignore  CMakeLists.txt  README.md  assets_manifest.md  build.bat  build.ps1  nesso_n1_pinmap.md  partitions.csv  sdkconfig.defaults  security_guidelines.md
components/nesso_ble/: CMakeLists.txt
components/nesso_ble/include/: nesso_ble.h
components/nesso_ble/src/: nesso_ble.c
components/nesso_bsp/: CMakeLists.txt
components/nesso_bsp/include/: nesso_bsp.h
components/nesso_bsp/src/: nesso_bsp.c
components/nesso_buttons/: CMakeLists.txt
components/nesso_buttons/include/: nesso_buttons.h
components/nesso_buttons/src/: nesso_buttons.c
components/nesso_buzzer/: CMakeLists.txt
components/nesso_buzzer/include/: nesso_buzzer.h
components/nesso_buzzer/src/: nesso_buzzer.c
components/nesso_eapol/: CMakeLists.txt
components/nesso_eapol/include/: nesso_eapol.h
components/nesso_eapol/src/: nesso_eapol.c
components/nesso_ir/: CMakeLists.txt
components/nesso_ir/include/: nesso_ir.h
components/nesso_ir/src/: nesso_ir.c
components/nesso_lcd/: CMakeLists.txt
components/nesso_lcd/include/: nesso_lcd.h
components/nesso_portal/: CMakeLists.txt
components/nesso_spi/: CMakeLists.txt
components/nesso_subghz/: CMakeLists.txt
components/nesso_sx1262/: CMakeLists.txt
components/nesso_sx1262/include/: nesso_sx1262.h
components/nesso_sx1262/src/: nesso_sx1262.c  nesso_sx1262_hal.c  nesso_sx1262_hal.h
components/nesso_ui/: CMakeLists.txt  idf_component.yml
components/nesso_ui/include/: nesso_ui.h
components/nesso_ui/src/: nesso_ui.c  splash_img.h
components/nesso_wardrive/: CMakeLists.txt
components/nesso_wifi/: CMakeLists.txt
components/nesso_zigbee/: CMakeLists.txt
components/pi4ioe5v6408/: CMakeLists.txt  Kconfig  README.md
main/: CMakeLists.txt  main.c
tools/: gif_to_frames.py
(+15 files in other folders)
